--- a/0. Inbox/기획 회의 내용 준비.md
+++ b/0. Inbox/기획 회의 내용 준비.md
@@ -1,17 +1,11 @@
 ##### 작성 날짜: 2023-10-26 19:01
 ---
 
-
+### 
 
 기획 진행 방향에 대해 이야기
 
-서브 기획자 내가 도와줘야 할 부분에 대해서 명확하게 하기 -> 이미 메인 기획이 동호님이라 따로 나한테 요청하는 것도 좋아보임
-
-강조되었으면 하는 것
-
-블랙앤 화이트에 어두운 다크 판타지 같지만, 병맛이고 희망이 넘치는 웃음이 가득한
-
-이질적인 
+서브 기획자 내가 도와줘야 할 부분에 대해서 명확하게 하기 -> 이미 메인 기획이 동호님이라 따로 나한테 요청하는 것도 좋아 보임
 
 세부 기획 피드백에 적은 비밀스러운 이스터 에그에 대한 생각
 
@@ -24,7 +18,6 @@
 
 - 민지님 아트 전달
 - 세화님 아트 전달
-
 
 ### 1챕터 메인시스템의 기능
 
@@ -76,4 +69,9 @@
 ### 마마고 컴퍼니
 
 어떤 게임인지 그냥 일회성인지 스토리가 담겨 있는지?
+
+
+###  1 메인시스템 탑다운 관련
+
+#### 이동관련
 
